<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="share_message">Посмотри курс по Android-разработке:\n  \nhttps://practicum.yandex.ru/profile/android-developer-plus/
    </string>
    <string name="share_title">Поделиться через</string>
    <string name="support_email">cervoneaca@gmail.com</string>
    <string name="support_subject">
    Сообщение разработчикам и разработчицам приложения Playlist Maker
    </string>
    <string name="support_message">
    Спасибо разработчикам и разработчицам за крутое приложение!
    </string>
    <string name="agreement_url">
    https://yandex.ru/legal/practicum_offer/ru/
    </string>
    <string name="chooser_email">Выберите почтовое приложение</string>
    <string name="chooser_browser">Открыть в браузере</string>
    <string name="search_error">Ничего не нашлось</string>
    <string name="retry">Обновить</string>
    <string name="Connection_error">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="youSearched">Вы искали</string>
    <string name="clearHistory">Очистить историю</string>

    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>







</resources>