<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    >


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:title="@string/settings"
        android:textColor="?attr/colorOnBackground"
        app:navigationIcon="@drawable/ic_back"/>



    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/theme_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/padding_screen_16"
        android:paddingVertical="@dimen/padding_screen_24"
        android:text="@string/dark_theme"
        android:textColor="?attr/colorOnBackground"
        android:textSize="@dimen/text_body" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/padding_screen_16"
        android:paddingVertical="@dimen/padding_screen_24"
        android:text="@string/share_app"
        android:textColor="?attr/colorOnBackground"
        android:textSize="@dimen/text_body"
        android:drawableEnd="@drawable/ic_share"
        android:drawablePadding="8dp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/padding_screen_16"
        android:paddingVertical="@dimen/padding_screen_24"
        android:text="@string/support"
        android:textColor="?attr/colorOnBackground"
        android:textSize="@dimen/text_body"
        android:drawableEnd="@drawable/ic_support"
        android:drawablePadding="8dp" />


    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/padding_screen_16"
        android:paddingVertical="@dimen/padding_screen_24"
        android:text="@string/agreement"
        android:textColor="?attr/colorOnBackground"
        android:textSize="@dimen/text_body"
        android:drawableEnd="@drawable/ic_arrow"
        android:drawablePadding="8dp" />

</LinearLayout>