<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="?attr/colorBackground"
    >

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="?attr/colorBackground">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/MainToolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_back_arrow_24"
            app:title="@string/search" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/search_input"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:background="@drawable/ic_search_bg"
                android:hint="@string/search"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="40dp"
                android:paddingEnd="16dp"
                android:singleLine="true"
                android:textColor="?attr/always_dark_blue"
                android:textColorHint="?attr/hint_color"
                android:textCursorDrawable="@drawable/cursor_blue"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_search_loop"
                app:tint="?attr/search_loop"/>

            <ImageView
                android:id="@+id/clear_button"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="12dp"
                android:src="@drawable/ic_clear_24"
                app:tint="?attr/clearButton" />

        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/historyTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/youSearched"
                android:textColor="?attr/colorInBackground"
                android:textSize="19sp"
                android:layout_marginTop="52dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/ys_display_medium"
                android:layout_gravity="center_horizontal"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:paddingBottom="80dp"
                android:clipToPadding="false"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/clearHistoryButton"
                android:layout_width="wrap_content"
                android:layout_height="36dp"

                android:text="@string/clearHistory"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:fontFamily="@font/ys_display_medium"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:layout_gravity="center_horizontal"

                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:textColor="?attr/colorBackground"
                app:cornerRadius="54dp"
                app:backgroundTint="?attr/colorInBackground"/>

        </LinearLayout>



        <LinearLayout
            android:id="@+id/placeholder_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:visibility="gone"
            android:paddingTop="120dp">

            <ImageView
                android:id="@+id/placeholder_image"
                android:layout_width="120dp"
                android:layout_height="120dp" />

            <TextView
                android:id="@+id/placeholder_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/search_error"
                android:textColor="?attr/colorOnBackground"
                android:textSize="19sp"
                android:fontFamily="@font/ys_display_medium" />

            <TextView
                android:id="@+id/placeholder_description"
                android:layout_width="312dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:textAlignment="center"
                android:maxLines="2"
                android:text="@string/Connection_error"
                android:textColor="?attr/colorOnBackground"
                android:textSize="19sp"
                android:fontFamily="@font/ys_display_medium"
                android:visibility="gone"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/retry_button"
                android:layout_width="91dp"
                android:layout_height="36dp"
                android:layout_marginTop="16dp"
                android:text="@string/retry"
                android:textAllCaps="false"
                android:textColor="?attr/colorBackground"
                android:textSize="14sp"
                android:fontFamily="@font/ys_display_medium"
                android:visibility="gone"
                android:paddingStart="6dp"
                android:paddingEnd="8dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                app:backgroundTint="?attr/colorInBackground"
                app:cornerRadius="18dp"/>

        </LinearLayout>



    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>