<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorBackground">


        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/MainToolbarStyle"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_back_arrow_24"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <androidx.cardview.widget.CardView
            android:id="@+id/coverContainer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="24dp"

            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:cardCornerRadius="8dp">

            <ImageView
                android:id="@+id/cover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:scaleType="centerCrop"/>
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/trackName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="?attr/colorInBackground"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="24dp"
            android:fontFamily="@font/ys_display_medium"

            app:layout_constraintTop_toBottomOf="@id/coverContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <TextView
            android:id="@+id/artistName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="?attr/colorInBackground"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="24dp"
            android:fontFamily="@font/ys_display_medium"

            app:layout_constraintTop_toBottomOf="@id/trackName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>




        <ImageButton
            android:id="@+id/addButton"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:background="@drawable/ic_add_button"
            app:layout_constraintStart_toStartOf="@id/coverContainer"
            app:layout_constraintTop_toTopOf="@id/playButton"
            app:layout_constraintBottom_toBottomOf="@id/playButton"/>


        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/ic_pause_button"
            app:layout_constraintTop_toBottomOf="@id/artistName"
            app:layout_constraintStart_toEndOf="@id/addButton"
            app:layout_constraintEnd_toStartOf="@id/favButton"/>


        <ImageButton
            android:id="@+id/favButton"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/ic_fav_button"
            app:layout_constraintEnd_toEndOf="@id/coverContainer"
            app:layout_constraintTop_toTopOf="@id/playButton"
            app:layout_constraintBottom_toBottomOf="@id/playButton"/>

        <TextView
            android:id="@+id/currentTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:layout_marginTop="8dp"
            android:textColor="?attr/colorInBackground"
            android:fontFamily="@font/ys_text_medium"

            app:layout_constraintTop_toBottomOf="@id/playButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <TextView
            android:id="@+id/durationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            style="@style/MediaActInfo"
            android:layout_marginTop="32dp"

            app:layout_constraintTop_toBottomOf="@id/currentTime"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/durationValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MediaActInfoRightSize"

            app:layout_constraintTop_toTopOf="@id/durationLabel"
            app:layout_constraintEnd_toEndOf="parent"/>


        <TextView
            android:id="@+id/albumLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/album"
            style="@style/MediaActInfo"
            android:layout_marginTop="12dp"

            app:layout_constraintTop_toBottomOf="@id/durationLabel"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/albumValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MediaActInfoRightSize"

            app:layout_constraintTop_toTopOf="@id/albumLabel"
            app:layout_constraintEnd_toEndOf="parent"/>


        <TextView
            android:id="@+id/yearLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"
            style="@style/MediaActInfo"
            android:layout_marginTop="12dp"

            app:layout_constraintTop_toBottomOf="@id/albumLabel"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/yearValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MediaActInfoRightSize"

            app:layout_constraintTop_toTopOf="@id/yearLabel"
            app:layout_constraintEnd_toEndOf="parent"/>


        <TextView
            android:id="@+id/genreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            style="@style/MediaActInfo"
            android:layout_marginTop="12dp"

            app:layout_constraintTop_toBottomOf="@id/yearLabel"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/genreValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MediaActInfoRightSize"

            app:layout_constraintTop_toTopOf="@id/genreLabel"
            app:layout_constraintEnd_toEndOf="parent"/>


        <TextView
            android:id="@+id/countryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            style="@style/MediaActInfo"
            android:layout_marginTop="12dp"

            app:layout_constraintTop_toBottomOf="@id/genreLabel"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/countryValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MediaActInfoRightSize"
            android:layout_marginBottom="16dp"

            app:layout_constraintTop_toTopOf="@id/countryLabel"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>